--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,12 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 .outerContainer {
     display: flex;
     justify-content: center;
-    height: 100vh;
     align-items: center;
+    height: 100vh;
     background-color: #1a1a1d;
 }
 
@@ -15,12 +11,16 @@
     flex-direction: column;
     justify-content: space-between;
     background: #ffffff;
-    border-radius: 5px;
+    border-radius: 8px;
     height: 60%;
     width: 35%;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 580px) {
+    .outerContainer {
+        height: 100%;
+    }
+
     .container {
         width: 100%;
         height: 100%;
