--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -1,28 +1,35 @@
-* {
-    margin: 0;
+html,
+body {
+    font-family: "Roboto", sans-serif;
     padding: 0;
+    margin: 0;
 }
+
+#root {
+    height: 100vh;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 .joinOuterContainer {
     display: flex;
     justify-content: center;
     text-align: center;
     height: 100vh;
     align-items: center;
-    background-color: #515154;
+    background-color: #1a1a1d;
 }
 
 .joinInnerContainer {
     width: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
 }
 
 .joinInput {
-    border-radius: 5px;
+    border-radius: 0;
     padding: 15px 20px;
-    width: 80%;
+    width: 100%;
 }
 
 .heading {
@@ -33,7 +40,7 @@
 }
 
 .button {
-    color: #ffffff;
+    color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
     background: #2979ff;
@@ -43,19 +50,21 @@
     border: none;
     width: 100%;
 }
+
 .mt-20 {
     margin-top: 20px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-    .joinInnerContainer {
-        width: 100%;
+@media (min-width: 320px) and (max-width: 580px) {
+    .joinOuterContainer {
         height: 100%;
+    }
+
+    .joinInnerContainer {
+        width: 90%;
     }
 }
 
-@media (min-width: 480px) and (max-width: 1200px) {
-    .joinInnerContainer {
-        width: 60%;
-    }
+button:focus {
+    outline: 0;
 }
